[package]
name = "hat"
version = "0.4.2"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

[[bin]]
name = "hat"
path = "src/main.rs"

[dependencies]
clap = "2.33"
log = "0.4"
simplelog = "0.5"

serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"

failure_derive = "0.1"
failure = "0.1"

url = "1.7"

dirs = "2"

reqwest = "0.9"
hyper = "0.12"
hyper-tls = { version="0.3", features = ["vendored"] }

http = "0.1"

base64 = "0.10"

rand = "0.6"

sha2 = "0.8"

colored_json = "1.0"
ansi_term = "0.11"
